--- a/cppguide_CN.html
+++ b/cppguide_CN.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
 <meta charset="utf-8">
-<title>Google C++ Style Guide</title>
+<title>谷歌C++代码风格指南</title>
 <link rel="stylesheet" href="include/styleguide.css">
 <script src="include/styleguide.js"></script>
 <link rel="shortcut icon" href="https://www.google.com/favicon.ico">
 </head>
 <body onload="initStyleGuide();">
 <div id="content">
-<h1>Google C++ Style Guide</h1>
+<h1>谷歌C++代码风格指南</h1>
 <div class="horizontal_toc" id="tocDiv"></div>
 
-<h2 id="Background" class="ignoreLink">Background</h2>
+<h2 id="Background" class="ignoreLink">背景</h2>
 
-<p>C++ is one of the main development languages  used by
-many of Google's open-source projects. As every C++
-programmer knows, the language has many powerful features, but
-this power brings with it complexity, which in turn can make
-code more bug-prone and harder to read and maintain.</p>
+<p>C++是被许多谷歌开源项目所使用的主要开发语言之一。
+如同每个C++程序员都知道的，这门语言具有许多强大的特性，
+但是这些强大的特性也带来了高复杂性，这反使代码更容易出错，
+并更难以阅读与维护。</p>
 
 <p>The goal of this guide is to manage this complexity by
 describing in detail the dos and don'ts of writing C++ code
